@@ -306,8 +306,8 @@ The flow of an incoming submission is as follows.
 <item>If verification is required, a judge inspects the judging. Only
       after it has been approved (marked as <em>verified</em>) will
       the result be visible outside the jury interface. This option
-      can be enabled by setting <tt>VERIFICATION_REQUIRED</tt> in
-      <tt>etc/common-config.php</tt>.
+      can be enabled by setting <tt>verification_required</tt> on
+      the <em>configuration settings</em> admin page.
 </enum>
 
 <sect1>Submission judging status codes
