@@ -226,7 +226,7 @@ function importZippedProblem($zip, $probid = NULL)
 					error("Could not create temporary file.");
 				}
 				file_put_contents($tmpfname, $zip->getFromIndex($j));
-				if( filesize($tmpfname) <= SOURCESIZE*1024 ) {
+				if( filesize($tmpfname) <= dbconfig_get('sourcesize_limit')*1024 ) {
 					submit_solution('domjudge', $probid, $langs[$langid], $tmpfname);
 				}
 				unlink($tmpfname);
